# geochessr

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  uwsgi.ini  wsgi.py
geo_server/: add_special_puzzles.py  buiid_eco_json.py  constants.py  delete_tables.py  get_new_positions.py  manage_runs.py  model.py  sqlite_wrapper.py  wipe_cache.py
geochessr/: mockup.html
scripts/: certificate.js  main.js
styles/: about.css  main.css
templates/: about.html  certificate.html  index.html
tests/: test_score_subfen.py
